--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -1,10 +1,16 @@
 {% extends 'base.html' %}
 {% block body %}
 
-<form action="/login" class="form-signin" method="POST">
-    <h2 class="form-signin-heading">Please Sign In</h2>
-    <input type="email" name="email" class="form-control" placeholder="Email Address" required autofocus />
-    <input type="password" name="password" class="form-control" placeholder="Password" required />
-    <button type="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
+<form action="/movie_list" method="POST">
+    <h2>Create a new user</h2>
+    <input type="email" name="email" placeholder="Email Address" required autofocus/>
+    <br>
+    <input type="password" name="password" placeholder="Password"/>
+    <br>
+    <input type="age" name="age" placeholder="Age"/>
+    <br>
+    <input type="zipcode" name="zipcode" placeholder="zipcode" />
+    <br>
+    <input type="submit" name="submit" value="Create Account" />
 </form>
 {% endblock %}
