users can login with sessions

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block body %}
 
-<form action="/movie_list" method="POST">
+<form action="/authenticate" method="POST">
     <h2>Login!</h2>
     <input type="email" name="email" placeholder="Email Address" required autofocus/>
     <br>
