set up all users list

--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block body %}
 
-<form action="/movie_list" method="POST">
+<form action="/add_user" method="POST">
     <h2>Create a new user</h2>
     <input type="email" name="email" placeholder="Email Address" required autofocus/>
     <br>
