--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,17 @@
 <head>
 </head>
 <body> <h1>Welcome to ratings!</h1>
+<div>
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+{% for message in messages %}
+<ul class="flashes">
+    <li>{{message}}</li>
+</ul>
+{% endfor %}
+{% endif %}
+{% endwith %}
+</div>
 <div>   {% block body %}{% endblock %}
 </div>
 </body>
