--- a/templates/movie_list.html
+++ b/templates/movie_list.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %}
 {% block body %}
 <h1>MOVIE LIST PAGE</h1>
+
+{% for movie in all_movies %}
+<h2> Movie {{movie.name}} </h2>
+{% endfor%}
+
 {% endblock %}
