website is all connected

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
 
 <form action="/login" method="GET">
 <input type="submit" name="submit" value="Login" />
-</form
+</form>
 
-
+<a href="/all_users">List of our users</a>
 
 {% endblock %}
