--- a/templates/movie_list.html
+++ b/templates/movie_list.html
@@ -3,7 +3,7 @@
 <h1>MOVIE LIST PAGE</h1>
 
 {% for movie in all_movies %}
-<h2> Movie {{movie.name}} </h2>
+<h2> {{movie.name}} </h2>
 {% endfor%}
 
 {% endblock %}
