creating ability to rate movie

--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -7,9 +7,9 @@
     <br>
     <input type="password" name="password" placeholder="Password"/>
     <br>
-    <input type="age" name="age" placeholder="Age"/>
+    <input type="text" name="age" placeholder="Age"/>
     <br>
-    <input type="zipcode" name="zipcode" placeholder="zipcode" />
+    <input type="text" name="zipcode" placeholder="zipcode" />
     <br>
     <input type="submit" name="submit" value="Create Account" />
 </form>
